--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(print,RandomsearchResult)
 S3method(print,RandomsearchResultSummaryMultiCrit)
 S3method(print,RandomsearchResultSummarySingleCrit)
+S3method(randomsearch,"function")
+S3method(randomsearch,smoof_function)
 S3method(summary,RandomsearchResult)
 export(randomsearch)
 import(ParamHelpers)
